--- a/css/styles.css
+++ b/css/styles.css
@@ -388,6 +388,71 @@ text-align: center;
   position: relative;
 }
 
+.serviciosSubSec1 {
+  width: 100%;
+  height: 70px;
+  background-color: #4266C2;
+
+  display: flex;
+  place-items: center;
+  justify-content: center;
+
+}
+
+.serviciosSec2 {
+  width: 100%;
+  height: 1450px;
+  background-color: #D6ECFF;
+}
+
+.cardServicios1 {
+  width: 55%;
+  height: 220px;
+  background-color: #3F7CB5;
+
+  border-radius: 4px;
+
+  position: relative;
+  top: 5%;
+}
+
+.cardServicios2 {
+  width: 55%;
+  height: 220px;
+  background-color: #3F7CB5;
+
+  border-radius: 4px;
+
+  position: relative;
+  top: 15%;
+
+  left: 45%;
+}
+
+.cardServicios3 {
+  width: 55%;
+  height: 220px;
+  background-color: #3F7CB5;
+
+  border-radius: 4px;
+
+  position: relative;
+  top: 25%;
+}
+
+.cardServicios4 {
+  width: 55%;
+  height: 220px;
+  background-color: #3F7CB5;
+
+  border-radius: 4px;
+
+  position: relative;
+  top: 35%;
+  left: 45%;
+}
+
+
 
 /* ....................................................... PAGINA SOBRE NOSOTROS .........................................................*/
 
